--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,13 +3,14 @@
 .container{
   background-color: #333333;
   height: 47px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   display: flex;
   justify-content: space-between;
   color: $dark-grey;
+  z-index: 100;
 
   p{
     font-weight: 300;
@@ -52,6 +53,10 @@
       p{
         font: 400 12px/15px Audiowide;
         margin-left: 6.61px;
+      }
+
+      mat-icon{
+        color: #FF8700;
       }
     }
 
