--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<app-header></app-header>
-<app-users-table></app-users-table>
-<app-footer></app-footer>
+<mat-sidenav-container hasBackdrop>
+  <mat-sidenav #sidenav fixedInViewport
+    [fixedBottomGap]="0" [fixedTopGap]="0"
+    position="end" [autoFocus]="false" opened
+    >
+    <app-filter></app-filter>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-header></app-header>
+    <app-users-table></app-users-table>
+    <app-footer></app-footer>
+  </mat-sidenav-content>
+</mat-sidenav-container>
