--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,7 @@ app-filter{
         line-height: 19px;
       }
 
-      .mat-form-field-label, .mat-input-element{
+      .mat-form-field-label, .mat-date-range-input, .mat-select-value-text{
         margin-left: 16px;
       }
 
