--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container hasBackdrop>
   <mat-sidenav #sidenav fixedInViewport
     [fixedBottomGap]="0" [fixedTopGap]="0"
-    position="end" [autoFocus]="false" opened
+    position="end" [autoFocus]="false"
     >
     <app-filter></app-filter>
   </mat-sidenav>
