--- a/src/app/components/users-table/users-table.component.scss
+++ b/src/app/components/users-table/users-table.component.scss
@@ -10,6 +10,7 @@ $table-border-radius: 6px;
   background-color: $light-grey;
   padding: 24px 40px;
   height: 78vh;
+  box-shadow: inset 0px 2px 16px rgba(0,0,0,0.08);
 
   table{
     width: 100%;
