--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -71,6 +71,12 @@
             color: #D83367;
           }
         }
+
+        .button-white{
+          width: 100%;
+          font-size: 14px;
+          margin-top: 10px;
+        }
       }
     }
   }
